Removing Gemfile, Gemfile.lock, README and LICENSE files from public path

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 markdown:    kramdown
 future:      false
+exclude:     ['Gemfile', 'LICENSE', 'README']
 permalink:   pretty
 highlighter: pygments
 paginate:    5
