redcarpet works better on githubpages

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Conversion
-markdown:    kramdown
+markdown:    redcarpet
 
 # Permalinks
 permalink:   pretty
@@ -15,9 +15,3 @@ gems:
   - jekyll-gist
   - jekyll-paginate
   - jekyll-sitemap
-
-
-# Markdown renderers
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
