--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ Temporary Items
 _site/
 .sass-cache/
 .jekyll-metadata
-
+.jekyll-cache/
 
 ### RubyMine ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
