--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ markdown:    kramdown
 permalink:   pretty
 future:      false
 baseurl:     ''
-url:         https://www.tiagoamaro.com.br
+url:         https://tiagoamaro.com.br
 
 # Setup
 exclude:     ['Gemfile', 'LICENSE', 'README', 'CNAME']
